--- a/doc/各个操作的触发情况.md
+++ b/doc/各个操作的触发情况.md
@@ -13,3 +13,11 @@
 * `mkdir()`: 创建文件夹，一般系统会先调用`lookup()`检查文件是否存在。
 
 * `rmdir()`: 删除目录，一般系统会先调用`lookup()`检查文件夹是否存在和是否是文件夹。部分语言（比如golang，所以单元测试中是调用`syscall.rmdir()`）封装的文件删除，会先调用`unlink()`再调用`rmdir()`，并且会检查`unlink()`返回的错误是否是`ENOTDIR`。
+
+* `setxattr()`: 设置文件的扩展属性，一般系统会先调用`lookup()`检查文件是否存在，但不会打开文件。
+
+* `getxattr()`: 获取文件的扩展属性，一般系统会先调用`lookup()`检查文件是否存在，但不会打开文件(PS: `lookup()`会有缓存的，比如`setxattr()`前调用了`lookup()`，后面的`getxattr()`就不需要了)。
+
+* `listxattr()`: 列出文件所有扩展属性名，一般系统会先调用`lookup()`检查文件是否存在，但不会打开文件(PS: 同上)。
+
+* `removexattr()`: 删除文件指定的扩展属性，一般系统会先调用`lookup()`检查文件是否存在，但不会打开文件(PS: 同上)。
