symlink的单元测试.

--- a/doc/各个操作的触发情况.md
+++ b/doc/各个操作的触发情况.md
@@ -21,3 +21,7 @@
 * `listxattr()`: 列出文件所有扩展属性名，一般系统会先调用`lookup()`检查文件是否存在，但不会打开文件(PS: 同上)。
 
 * `removexattr()`: 删除文件指定的扩展属性，一般系统会先调用`lookup()`检查文件是否存在，但不会打开文件(PS: 同上)。
+
+* `symlink()`: 创建软连接。
+
+* `readlink()`: 读取软连接文件指向的路径。
