添加了mknod, unlink, rename, link的单元测试; 添加一个脚本方便执行单元测试;

--- a/doc/各个操作的触发情况.md
+++ b/doc/各个操作的触发情况.md
@@ -25,3 +25,9 @@
 * `symlink()`: 创建软连接。
 
 * `readlink()`: 读取软连接文件指向的路径。
+
+* `mknod()`: 创建一个文件，一般系统会先调用`lookup()`检查文件是否已经存在。
+
+* `unlink()`: 删除文件。
+
+* `link()`: 创建硬链接。
