open(), read(), write(), fsync(), flush(), release(), statfs()的单元测试

--- a/doc/各个操作的触发情况.md
+++ b/doc/各个操作的触发情况.md
@@ -31,3 +31,17 @@
 * `unlink()`: 删除文件。
 
 * `link()`: 创建硬链接。
+
+* `open()`: 打开文件。
+
+* `read()`: 读取文件内容。
+
+* `write()`: 写文件内容，注意`offset`偏移量。
+
+* `fsync()`: 同步文件内容，将文件同步到“硬盘”上。
+
+* `flush()`: 和`fsync()`是不同的，它会在文件`close`的时候调用，主要是为了返回写错误和删除文件锁。因为文件描述符可以被复制，比如(dup, dup2, fork)，每次`close`都会调用`flush()`，所以可能会被调起多次。
+
+* `release()`: 关闭释放文件描述符时调用。和`flush()`不用，每个打开的文件只有当其没有任何引用才会调起`release()`，所以对于打开的文件只会调用1次。
+
+* `statfs()`: 获取文件系统信息，详见[http://man7.org/linux/man-pages/man2/statfs.2.html](http://man7.org/linux/man-pages/man2/statfs.2.html)
