添加setlk, getlk单元测试

--- a/doc/各个操作的触发情况.md
+++ b/doc/各个操作的触发情况.md
@@ -45,3 +45,7 @@
 * `release()`: 关闭释放文件描述符时调用。和`flush()`不用，每个打开的文件只有当其没有任何引用才会调起`release()`，所以对于打开的文件只会调用1次。
 
 * `statfs()`: 获取文件系统信息，详见[http://man7.org/linux/man-pages/man2/statfs.2.html](http://man7.org/linux/man-pages/man2/statfs.2.html)
+
+* `access()`: 检查文件权限。如果mount时设置了`default_permissions`选项，或者fuse初始化时设置了`FUSE_CAP_POSIX_ACL`，此方法将不会被调用。PS: 如果`access()`返回错误码`ENOSYS`，那么之后将不会调用`access()`。
+
+* `create()`: 创建并打开文件。如果没有实现，将会调用`mknod()`和`open()`代替。PS: 如果`create()`返回错误码`ENOSYS`，那么之后将不会调用`create()`。
