--- a/doc/各个操作的触发情况.md
+++ b/doc/各个操作的触发情况.md
@@ -49,3 +49,5 @@
 * `access()`: 检查文件权限。如果mount时设置了`default_permissions`选项，或者fuse初始化时设置了`FUSE_CAP_POSIX_ACL`，此方法将不会被调用。PS: 如果`access()`返回错误码`ENOSYS`，那么之后将不会调用`access()`。
 
 * `create()`: 创建并打开文件。如果没有实现，将会调用`mknod()`和`open()`代替。PS: 如果`create()`返回错误码`ENOSYS`，那么之后将不会调用`create()`。
+
+* `bmap()`: 仅当是块设备是触发，`mount()`的时候需要参数`blkdev`和`fsname={块设备路径}`。
